--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 12rem;
+            font-size: 12vw;
         }
         
     </style>
